# near-contract-course-basics

./: .gitignore  CORE.md  README.md
0. NEAR 区块链核心概念/: README.md
1. NEAR 区块链核心概念/: README.md
1. 认识 NEAR 智能合约/: Cargo.toml  README.md  makefile
1. 认识 NEAR 智能合约/src/: lib.rs
2. 合约的编译与部署/: README.md
2. 认识 NEAR 智能合约/: Cargo.toml  README.md
2. 认识 NEAR 智能合约/src/: lib.rs
3. 合约的编译与部署/: README.md
3. 容器与状态存储/: README.md  makefile
3. 容器与状态存储/src/: lib.rs
3. 状态存储与容器/: Cargo.toml  README.md  makefile
3. 状态存储与容器/src/: lib.rs
4. 状态存储与容器/: Cargo.toml  README.md
4. 状态存储与容器/src/: lib.rs
4. 跨合约调用/: Cargo.toml  README.md
4. 跨合约调用/src/: cross.rs  lib.rs
4. 跨合约调用与回调函数/: README.md  makefile
4. 跨合约调用与回调函数/src/: cross.rs  lib.rs
5. 单元测试与集成测试/: .lintstagedrc.mjs  Cargo.toml  README.md  makefile  package.json  tsconfig.json
5. 单元测试与集成测试/tests/: hello_test.spec.ts  utils.ts
5. 跨合约调用与回调函数/: Cargo.toml  README.md
5. 跨合约调用与回调函数/src/: cross.rs  lib.rs
6. 单元测试与集成测试/: .eslintrc.json  Cargo.toml  README.md  jest.config.json  makefile  package.json  pnpm-lock.yaml  tsconfig.json
6. 单元测试与集成测试/src/: lib.rs
6. 单元测试与集成测试/test/: context.ts  hello_test.spec.ts
6. 编写一个 FT 合约/: README.md  makefile
6. 编写一个 FT 合约/src/: lib.rs
7. 编写一个 FT 合约/: Cargo.toml  README.md
7. 编写一个 NFT 合约/: README.md  makefile
7. 编写一个 NFT 合约/src/: lib.rs
8. 编写一个 NFT 合约/: Cargo.toml  README.md
